crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__enum_struct_4.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/mod.rs
assertion_line: 214
expression: "goto_definition(r#\"\n%! main.sp\nenum struct Bar {\n    int bar;\n}\n\nenum struct Foo {\n    Bar bar;\n     |\n     ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 5,
        "character": 4
      },
      "end": {
        "line": 5,
        "character": 7
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 2,
        "character": 1
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 12
      },
      "end": {
        "line": 0,
        "character": 15
      }
    }
  }
]
