crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__function_parameter_4.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/mod.rs
assertion_line: 177
expression: "goto_definition(r#\"\n%! main.sp\n#include \"foo.sp\"\nvoid bar(int foo) {\n              |\n              ^\n}\n\n%! foo.sp\nint foo;\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 13
      },
      "end": {
        "line": 1,
        "character": 16
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 9
      },
      "end": {
        "line": 1,
        "character": 16
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 13
      },
      "end": {
        "line": 1,
        "character": 16
      }
    }
  }
]
